--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
                 </div>
             </div>
         </section>
-        <div>
+
+        <section id="section-banner">
             <img src="img/banner.png" class="banner" style="width: 80vw; height: 50vh;">
-        </div>
+        </section>
+
         <section id="quemsomos" class="section-quemsomos">
 
             <div class="container-desc-img">
@@ -215,6 +217,11 @@
             <div class="container-contato-footer">
                 <span>(22) 2735-2371</span>
                 <span>contato@lifeprestadora.com.br</span>
+                <div class="container-social-icons">
+                    <i class="fa-brands fa-instagram facebook" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-facebook instagram" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
+                </div>
             </div>
         </footer>
     </main>
