--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                         <p>
                             <i class="fa-solid fa-circle-check" style="color: #475e29"></i>
-                            <span style="padding: 0px 0px 0px 10px;">Comprometimento: Nosso compromisso é com a excelência em cada detalhe.</span>
+                            <span style="padding: 0px 0px 0px 10px;">Comprometimento: Compromisso é com a excelência em cada detalhe.</span>
                         </p>
 
                         <p>
