--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         <div class="bloco-logo">
             <img class="logo" src="img/logo.png" alt="">
             <div class="container-links">
-                <ul>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#servicos">SERVIÇOS</a></li>
-                    <li><a href="#quemsomos">QUEM SOMOS</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="#home">HOME</a></li>
+                        <li><a href="#servicos">SERVIÇOS</a></li>
+                        <li><a href="#quemsomos">QUEM SOMOS</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
@@ -45,19 +47,30 @@
             <div class="container-home">
                 <div class="section-home-background">
                     <span class="span-1">Life Service,</span>
-                    <span class="span-2 typing"><br> transformando cada ambiente, <br>tornando sua vida <br>mais segura e mais leve!</span>
+                    <span class="span-2 typing">
+                        <br> transformando cada ambiente, 
+                        <br>tornando sua vida 
+                        <br>mais segura e mais leve!
+                    </span>
                 </div>
-                <a class="btn-contato" href="https://wa.me/5522999649567">CONTATO</a>
+                <a class="btn-contato" href="https://wa.me/5522999649567">
+                    CONTATO
+                </a>
             </div>
 
             <div class="container-blocos">
                 <div class="blocos" style="display: flex; flex-direction: column;">
                     <div>
-                        <i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>
-                        <span style="font-weight: 600;">Localização</span>
+                        <i class="fa-solid fa-location-dot" style="color: #ffffff;">
+                        </i>
+                        <span style="font-weight: 600;">
+                            Localização
+                        </span>
                     </div>
                     <div>
-                        <span>Rua dos Goytacazes, 1064 - IPS</span>
+                        <span>
+                            Rua dos Goytacazes, 1064 - IPS
+                        </span>
                     </div>
                 </div>
                 <div class="blocoDois" style="display: flex; flex-direction: column;">
@@ -177,7 +190,7 @@
                     <div class="container-descricao">
                         <span style="color: #475e29; font-weight: 600; letter-spacing: 2px;">Sobre nós,</span>
                         <h1>Quem somos</h1>
-                        <span style="color: #A1A1A1; line-height: 30px;">Life Service é uma empresa multifacetada dedicada a fornecer uma ampla gama de serviços para atender às diversas necessidades de nossos clientes. Com uma equipe altamente qualificada e comprometida, oferecemos soluções em segurança, serviços gerais, administração, atendimento ao cliente, além de um açougue de qualidade superior. Nossa missão é simplificar a vida de nossos clientes, proporcionando-lhes tranquilidade e eficiência em todas as áreas em que atuamos. Somos impulsionados pela excelência, integridade e compromisso com a satisfação do cliente, buscando sempre superar expectativas e criar relacionamentos duradouros com quem confia em nossos serviços.</span>
+                        <span class="desc-mobile" style="color: #A1A1A1; line-height: 30px;">Life Service é uma empresa multifacetada dedicada a fornecer uma ampla gama de serviços para atender às diversas necessidades de nossos clientes. Com uma equipe altamente qualificada e comprometida, oferecemos soluções em segurança, serviços gerais, administração, atendimento ao cliente, além de um açougue de qualidade superior. Nossa missão é simplificar a vida de nossos clientes, proporcionando-lhes tranquilidade e eficiência em todas as áreas em que atuamos. Somos impulsionados pela excelência, integridade e compromisso com a satisfação do cliente, buscando sempre superar expectativas e criar relacionamentos duradouros com quem confia em nossos serviços.</span>
                     </div>
                     <div class="msg-importante">
                         <p>
@@ -202,7 +215,7 @@
                     </div>
                 </div>
                 <div class="box-2">
-                    <img src="img/img-quemsomos.jpg" alt="">
+                    <img class="img-quemsomos" src="img/img-quemsomos.jpg" alt="">
                 </div>
             </div>
         </section>
