--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
                         <br>mais segura e mais leve!
                     </span>
                 </div>
-                <a class="btn-contato" href="https://wa.me/5522999649567">
-                    CONTATO
-                </a>
+                <div class="container-btn-contato">
+                    <a class="btn-contato" href="https://wa.me/5522999649567">
+                        CONTATO
+                    </a>
+                </div>
             </div>
             
             <div class="container-blocos">
