--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
             <div class="container-home">
                 <div class="overlay">
                     <i onclick="closeNav()" class="fa-solid fa-x close"></i>
+                    <div class="title-menu-mobile">
+                        <span>SIGAM-NOS</span>
+                    </div>
+                    <div class="social-icons-menu-mobile">
+                        
+                        <a href="https://www.instagram.com/lifeserviceprestadora/">
+                            <i class="fa-brands fa-instagram facebook" style="color: #ffffff;"></i>
+                        </a>                        
+                        <a href="https://www.facebook.com/prestadoralifeservice/">
+                            <i class="fa-brands fa-facebook instagram" style="color: #ffffff;"></i>
+                        </a>
+                        <a href="https://wa.me/5522999649567">    
+                            <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>                
+                        </a>
+                    </div>
                     <nav>
                         <ul class="mobile-links">
                             <li><a onclick="closeNav()" href="#home">HOME</a></li>
@@ -55,6 +70,11 @@
                             <li><a onclick="closeNav()" href="#quemsomos">QUEM SOMOS</a></li>
                         </ul>
                     </nav>
+                    <div class="container-logo-menu-mobile">
+                        <div class="logo-menu-mobile">
+                            <img class="logo" src="img/logo.png" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div class="section-home-background">
                     <span class="span-1">Life Service,</span>
