--- a/index.html
+++ b/index.html
@@ -235,20 +235,20 @@
 
         <section id="trabalheconosco" class="section-container-form">
             <div class="box1-trabalheconosco">
-                <span style="font-size: 70px; color: #fff; font-weight: 600;">
+                <span class="box1-span1">
                     Trabalhe<br>conosco!
                 </span>
-                <span style="color: #fff; padding: 20px 0px 40px 0px;">
-                    Se preferir pode usar outro meio de contato:
+                <span class="box1-span2">
+                    Nós valorizamos pessoas talentosas como você!
                 </span>
-                <div style="display: flex; flex-direction: column;">
+                <div class="none" style="display: flex; flex-direction: column;">
                     <span>
-                        <i class="fa-solid fa-envelope" style="color: #ffffff; padding: 0px 10px 10px 0px"></i>
-                        <span style="color: #fff;">contato@lifeprestadora.com.br</span>
+                        <i class="none" class="fa-solid fa-envelope" style="color: #ffffff; padding: 0px 10px 10px 0px"></i>
+                        <span class="none" style="color: #fff;">contato@lifeprestadora.com.br</span>
                     </span>
-                    <span style="color: #ffffff; padding-right: 10px;">
-                        <i class="fa-solid fa-phone" style="color: #ffffff; padding-right: 10px;"></i>
-                        <span>(22) 2735-2371</span>
+                    <span class="none" style="color: #ffffff; padding-right: 10px;">
+                        <i class="none" class="fa-solid fa-phone" style="color: #ffffff; padding-right: 10px;"></i>
+                        <span class="none">(22) 2735-2371</span>
                     </span>
                 </div>
             </div>
