--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
                 </span>
                 <div class="none" style="display: flex; flex-direction: column;">
                     <span>
-                        <i class="none" class="fa-solid fa-envelope" style="color: #ffffff; padding: 0px 10px 10px 0px"></i>
+                        <i class="fa-solid fa-envelope" style="color: #ffffff; padding: 0px 10px 10px 0px"></i>
                         <span class="none" style="color: #fff;">contato@lifeprestadora.com.br</span>
                     </span>
                     <span class="none" style="color: #ffffff; padding-right: 10px;">
-                        <i class="none" class="fa-solid fa-phone" style="color: #ffffff; padding-right: 10px;"></i>
+                        <i class="fa-solid fa-phone" style="color: #ffffff; padding-right: 10px;"></i>
                         <span class="none">(22) 2735-2371</span>
                     </span>
                 </div>
