--- a/index.html
+++ b/index.html
@@ -238,11 +238,13 @@
                 <span class="box1-span1">
                     Trabalhe<br>conosco!
                 </span>
-                <span class="box1-span2">
-                    Nós valorizamos pessoas talentosas como você!
-                </span>
+                <div>
+                    <span class="box1-span2">
+                        Nós valorizamos pessoas talentosas como você!
+                    </span>
+                </div>
                 <div class="none" style="display: flex; flex-direction: column;">
-                    <span>
+                    <span class="none">
                         <i class="fa-solid fa-envelope" style="color: #ffffff; padding: 0px 10px 10px 0px"></i>
                         <span class="none" style="color: #fff;">contato@lifeprestadora.com.br</span>
                     </span>
