--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 
         <section id="section-banner">
-            <img src="img/banner.png" class="banner" style="width: 80vw; height: 50vh;">
+            <!-- <img src="img/banner.png" class="banner" style="width: 80vw; height: 50vh;"> -->
         </section>
 
 
